deployment/namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "my-test-ns",
    "labels": {
      "istio-injection": "enabled"
    }
  }
}
