deployment/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: my-env1-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-test-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/env1"
    route:
    - destination:
        port:
          number: 8001
        host: my-env1-svc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: my-test-ns
  name: my-env2-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-test-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/env2"
    route:
    - destination:
        port:
          number: 8002
        host: my-env2-svc
